--- a/css/style.css
+++ b/css/style.css
@@ -13,35 +13,56 @@ header {
     background-size: cover;
     opacity: 0.8; */
     padding: 150px 350px 50px 50px;
-    background-color: rgb(32, 36, 35);
+    background-image: url('../images/headimg.jpg');
+    background-repeat: no-repeat;
+    transition: 3s;
+    background-size:cover;
+
+
+    animation-name:animate;
+    animation-duration: 10s;
+    animation-direction: alternate-reverse;
+    animation-iteration-count: infinite;
+    animation-fill-mode: forwards;
+    animation-play-state: running;
+    animation-timing-function: none;
+
+    /* background-color: rgb(32, 36, 35); */
     /* border: 4px red solid; */
 }
 
-header .content-1 img {
-    width: 50%;
-    height: 50vh;
-    float: left;
-    opacity: .7;
-    /* border-radius: 20%; */
-    /* border: yellow 2px solid; */
-
-
+@keyframes animate{
+    40%{
+        background-image: url(../images/bg4.jpeg);
+    }
+    70%{
+        background-image: url(../images/bg5.jpeg);
+    }
+    30%{
+        background-image: url(../images/bg6.jpeg);
+}
 }
 
+
+
+
 header .content-2 .para {
+    text-align: center;
     width: 20%;
     height: 50vh;
     float: right;
+    mix-blend-mode: screen;
     /* border: 3px red solid; */
 
 }
 
 header .content-2 img {
-    width: 20%;
+    width: 100%;
+    padding-right: 10px;
     height: 30vh;
     float: right;
     border-radius: 50%;
-    border: yellow 2px solid;
+    /* border: yellow 2px solid; */
 
 
 }
@@ -138,38 +159,61 @@ main .content-2 .para-2 {
 
 **********/
 
+
+.iv-section .head{
+    width: 100%;
+    height: 20%
+}
+
+.iv-section .menu{
+    
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    height: 80%;
+    /* border: 5px brown solid; */
+}
+.iv-section .menu ul
+{
+    padding-top: 20px;
+}
+.iv-section .menu ul li{
+    list-style-type: "\27A4";
+    line-height: 28px;
+    
+
+}
+
 .iv-section {
-    display: flex;    
+    padding-top: 30px;
+    /* display: flex;     */
     width: 100%;
     height: 75vh;
-    /* border: rgb(37, 17, 61) 4px solid; */
-    padding: 50px;
+    text-align: center;
+    
+    /* padding: 50px; */
 }
 
 .iv-section h1 {
     text-align: center;
-    /* width: 100%; */
-    /* border: 3px solid rgb(3, 26, 0); */
+    
 }
 
 .iv-section .content-2 {
     width: 33%;
     height: 60vh;
-    /* border: 3px solid rgb(3, 26, 0); */
     padding: 50px;
 }
 
-.iv-section .content-3 {
+/* .iv-section .content-3 {
     width: 33%;
     height: 60vh;
-    /* border: 3px solid rgb(3, 26, 0); */
     padding: 50px;
-}
+} */
 
 .iv-section .content-4 {
     width: 33%;
     height: 60vh;
-    /* border: 3px solid rgb(3, 26, 0); */
     padding: 50px;
 }
 
@@ -185,13 +229,22 @@ main .content-2 .para-2 {
     width: 100%;
     height: 50vh;
     /* border: rgb(49, 70, 57) 4px solid; */
-    background-image: url('../images/bg');
+    /* background-image: url('../images/bg'); */
+    /* background-attachment: fixed; */
     background-repeat: no-repeat;
     background-size: cover;
   /* scroll-behavior: smooth; */
 }
 
+.parallax {
+    min-height: 100%;
+    background: transparent;
+
+}
+
 .v-section .content {
+    z-index: 2;
+    position: relative;
     color: aliceblue;
     width: 40%;
     height: 45vh;
@@ -199,6 +252,7 @@ main .content-2 .para-2 {
     margin: auto;
     padding:80px 0px 0px 0px;
 }
+
 
 .v-section .content h1 {
     text-align: center;
@@ -221,6 +275,7 @@ main .content-2 .para-2 {
 }
 .v-section img {
     align-content: center;
+
 }
 
 
