--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,13 @@
 }
 
 header {
-    display: flex;
     width: 100%;
+    /* height: 100vh; */
     /* padding: 150px 350px 50px 50px; */
     background-image: url('../images/headimg.jpg');
     background-repeat: no-repeat;
     transition: 3s;
+    opacity: 0.9;
     background-size:100% 100%;
     animation-name:animate;
     animation-duration: 10s;
@@ -35,32 +36,68 @@ header {
     }
     30%{
         background-image: url(../images/bg6.jpeg);
-}
-}
-
-
-
-
-header .content-2 .para {
-    text-align: center;
-    width: 35%;
-    height: 50vh;
-    float: right;
-    mix-blend-mode: screen;
-    border: 3px red solid;
-
+    }
 }
 
-header .content-2 img {
+
+
+header .content {
+    display: flex;
+    /* text-align: center; */
+    justify-content: space-around;
+    
+    padding: 10% 10% 10% 10%;
+    /* border: 2px yellow solid; */
+}
+header .content .logo {
+    width: 30%;
+    /* padding: 1rem; */
+    /* border: 2px solid rebeccapurple; */
+    border-radius: 30%;
+    background-color:rgba(0, 0, 0, 0.6);
+}
+header .content .logo lottie-player{
     width: 100%;
-    padding-right: 10px;
-    height: 30vh;
-    float: right;
-    border-radius: 50%;
-    /* border: yellow 2px solid; */
-
-
+    height: 100%;
 }
+header .content .para h1 {
+    padding: 2rem 2rem 2rem 2rem;
+}
+header .content .para {
+    text-align: center;
+    font-size: large;
+    font-weight: 300;
+    color: white;
+    padding: 1rem 1rem 1rem 2rem;
+    width: 40%;
+    border-radius: 30%;
+    background-color:rgba(0, 0, 0, 0.6);
+    /* border: 3px red solid; */
+}
+
+@media (max-width : 700px) {
+    header .content {
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    header .content .logo {
+        width: 100%;
+        /* padding: 1rem; */
+        /* border: 2px solid rebeccapurple; */
+        border-radius: 30%;
+        background-color:rgba(0, 0, 0, 0.6);
+    }
+    header .content .logo lottie-player{
+        width: 100%;
+        height: 100%;
+    }
+    header .content .para {
+        width: 100%;
+    }
+}
+
 
 /* %%%%%%%% 
     
@@ -89,6 +126,7 @@ main .content-1 .sec-ii-img-1 {
     transition: 3s;
     animation-duration: 3s;
     animation-iteration-count: 1;
+    scroll-behavior: smooth;
     animation-fill-mode:alternate;
     animation-timing-function: ease-in-out;
     
@@ -140,7 +178,7 @@ main .content-1 .para-1 {
         margin: 0 auto;
         width: 100%;
         padding: 2rem;
-        border: 2px blue solid;
+        /* border: 2px blue solid; */
     }
     main .content-1 .sec-ii-img-1 {
         width: 70%;
@@ -181,7 +219,7 @@ main .content-2 .sec-ii-img-2 {
     animation: cup1;
     transition: 3s;
     animation-duration: 3s;
-    animation-delay: 2s;
+    animation-delay: .8s;
     animation-iteration-count: 1;
     animation-fill-mode:alternate;
     animation-timing-function: ease-in-out;
@@ -410,7 +448,7 @@ main .content-2 .para-2 {
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     padding: 1.5rem;
     /* border: rgb(212, 43, 212) 4px solid; */
 }
@@ -424,7 +462,7 @@ main .content-2 .para-2 {
 .vi-section .pic {
     /* padding:2rem ; */
     width: 50%;
-    /* border: 3px red solid; */
+    /* margin-left: 16rem ; */
     float: right;
   
 }
@@ -440,6 +478,7 @@ main .content-2 .para-2 {
 @media (max-width : 700px) {
     .vi-section {
         display: flex;
+        justify-content: space-around;
         flex-direction: column;
     }
     .vi-section .content, .vi-section .pic {
@@ -452,73 +491,85 @@ main .content-2 .para-2 {
 
 
 /* footar section */
+
+
 .vii-section {
-    /* padding-top: 50px; */
     width: 100%;
-    height: 100vh;
-    /* border: rgb(128, 196, 90) 4px solid; */
+    padding: 3rem;
+    /* border: rgb(128, 196, 90) 2px solid; */
     background-color: rgba(12, 9, 9, 0.8);
     color: white;
 }
-.contact-form {
-    padding: 30px;
+.vii-section .heading {
+    text-align: center;
+    padding: 2rem 0rem 3rem 0rem;
+}
+.vii-section .footar-flex {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    padding: 2rem;
+    /* border: 2px red solid; */
+}
+
+.vii-section .footar-flex .name {
+    padding: 1rem;
+}
+.vii-section .footar-flex .name input {
+    width: 100%;
+    /* border: none; */
+    border-style: none;
+
+    padding: 0.6rem 0rem 0rem 0rem;
+   
+}
+.vii-section .footar-flex .msg textarea {
+    width: 100%;
+}
+.vii-section .footar-flex .form-ex {
+    flex-basis: 29rem;
+    /* border: red 2px solid; */
+    padding: 2rem;
+}
+.vii-section .footar-flex .address {
     width: 50%;
-    height: 500px;
-    /* border: rgb(212, 43, 212) 2px solid; */
-    justify-content: center;
+    /* border: 2px red solid; */
+    padding: 1rem;
+    /* margin-left: 13rem; */
 }
-.contact-form .submit {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.vii-section .footar-flex .address p {
+    padding: 1rem;
 }
 
-.contact-form .submit input {
-    width: 150px;
-    padding: 10px;
-}
-
-.contact-form .submit input:hover {
-    background-color: rgb(25, 32, 32);
-    color: wheat;
-}
-.contact-form h1 {
+.vii-section .footar-flex .address h1{
     text-align: center;
 }
-.contact-form input {
-
-    width: 300px;
-    height: 50px;
+@media (max-width : 700px) {
+    .vii-section .footar-flex {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        /* border: 2px red solid; */
+    }
+    .vii-section .footar-flex .address p {
+       width: 100%;
+       padding: 1rem;
+        text-align: center;
+    }
+    .vii-section .social-icon {
+        width: 20%;
+    }
 }
 
-.contact-form textarea {
-    width: 300px;
-    height: 50px;
-}
-
-.address {
-    width: 45%;
-    height: 200px;
-    /* border: 3px red solid; */
-    float: right;
-    margin: -400px 20px 0px 50px;
-}
-
-.social-icon {
+.vii-section .social-icon {
+    width: 10%;
     display: flex;
     flex-direction: row;
-    padding: 20px;
-    width: 400px;
-    height: 100px;
-    /* border: 5px red solid; */
-    margin: 150px 10px 10px 20px;
-    float: right;
+    padding: 1rem;
+    /* border: rebeccapurple solid 2px; */
+    
 }
 
-.social-icon .flex-item {
-    margin: 20px;
-}
-
-span {
-    text-align: center;
+.vii-section .social-icon a {
+    padding: 1rem;
 }
