--- a/css/style.css
+++ b/css/style.css
@@ -544,9 +544,9 @@ main .content-2 .para-2 {
     padding: 2rem;
 }
 .vii-section .footar-flex .address {
-    width: 50%;
+    width: 90%;
     /* border: 2px red solid; */
-    padding: 1rem;
+    padding-left: 10rem;
     /* margin-left: 13rem; */
 }
 .vii-section .footar-flex .address p {
@@ -563,11 +563,11 @@ main .content-2 .para-2 {
         flex-direction: column;
         /* border: 2px red solid; */
     }
-    .vii-section .footar-flex .address p {
-       width: 100%;
-       padding: 1rem;
-        text-align: center;
+    .vii-section .footar-flex .address {
+        width: 100%;
+        padding: 0;
     }
+
     .vii-section .social-icon {
         width: 20%;
     }
